--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ maximum-scale=1.0, user-scalable=no" />
 <div class="nav-ht-fix"> </div>
 <div class="main-bg">
     <div class="bg-home"></div>
-    <div class="centered">
+    <div class="main-text-heading centered">
         Finsurety
         <br>
         signifies
