html pages added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ maximum-scale=1.0, user-scalable=no"/>
                         </li>
 
 
-                        <li><a href="#">Company Secretarial</a></li>
+                        <li><a href="Company-secretarial.html">Company Secretarial</a></li>
 
 
                     </ul>
@@ -68,13 +68,13 @@ maximum-scale=1.0, user-scalable=no"/>
                 <li><a href="#">Sectors</a></li>
                 <li><a href="#">Finsurety</a>
                     <ul class="dropdown-1">
-                        <li><a href="#">The Firm & Partners</a></li>
-                        <li><a href="#">Board of Advisors & Finsurety Team</a></li>
+                        <li><a href="the-firm.html">The Firm & Partners</a></li>
+                        <li><a href="our-team.html">Board of Advisors & Finsurety Team</a></li>
                     </ul>
                 </li>
                 <li><a href="#">News Letter & Articles
                 </a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="careers.html">Contact Us</a></li>
             </ul>
         </div>
     </div>
