footer, sidebar and css fixes

--- a/careers.html
+++ b/careers.html
@@ -20,42 +20,57 @@ maximum-scale=1.0, user-scalable=no" />
 </head>
 <body style="overflow-x: hidden">
 <!-- partial:index.partial.html -->
-<section class="navigation">
+<section class="navigation ">
     <div style="background: rgb(255,255,255);">
         <a href="index.html"><img src="images/Finsurety.png" style="height:80px;margin-bottom: 2px; display: block;
   margin-left: auto;
   margin-right: auto;"></a>
     </div>
     <div class="nav-container ">
+        <!--        <nav style="background: rgb(248, 249, 250);">-->
+        <!--            -->
+        <!--            <div style="text-align: center; padding-left: 20px;padding-right: 20px">THE WEBSITE IS UNDER MAINTENENCE. WE WILL BE BACK SOON</div>-->
+        <!--        </nav>-->
         <div class="nav-links">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Services</a>
                     <ul class="dropdown-1">
-                        <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a></li>
-                        <li><a href="auditing-and-assurance.html">Auditing & Assurance</a><ul class="dropdown-2">
-                            <li><a href="statutory-audit.html">Statutory Audit</a></li>
-                            <li><a href="#">Internal Audit</a></li>
-                        </ul></li>
-                        <li><a href="tax-and-regulatory.html">Tax & Regulatory</a>
+                        <li><a href="tax-advisory.html">Tax Advisory</a>
                             <ul class="dropdown-2">
                                 <li><a href="direct-tax.html">Direct Tax</a></li>
                                 <li><a href="indirect-tax.html">Indirect Tax</a></li>
-                            </ul></li>
-                        <li><a href="#">Company Secretarial</a></li>
-                        <li><a href="corporate-finance-debt-restructuring.html">Corporate Finance</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="auditing-and-assurance.html">Audit & Assurance</a>
+                            <ul class="dropdown-2">
+                                <li><a href="statutory-audit.html">Statutory Audit</a></li>
+                                <li><a href="#">Internal Audit</a></li>
+                                <li><a href="#">Other Audits</a></li>
+                            </ul>
+                        </li>
                         <li><a href="financial-accounting.html">Financial Accounting</a></li>
+                        <li><a href="corporate-finance-debt-restructuring.html">Debt Syndication &amp; Corporate
+                            Finance</a></li>
+                        <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a>
+                        </li>
+
+
+                        <li><a href="Company-secretarial.html">Company Secretarial</a></li>
+
+
                     </ul>
                 </li>
                 <li><a href="#">Sectors</a></li>
                 <li><a href="#">Finsurety</a>
                     <ul class="dropdown-1">
-                        <li><a href="#">The Firm & Partners</a></li>
-                        <li><a href="#">Board of Advisors & Finsurety Team</a></li>
-                    </ul></li>
+                        <li><a href="the-firm.html">The Firm & Partners</a></li>
+                        <li><a href="our-team.html">Board of Advisors & Finsurety Team</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">News Letter & Articles
                 </a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="careers.html">Contact Us</a></li>
             </ul>
         </div>
     </div>
@@ -63,64 +78,13 @@ maximum-scale=1.0, user-scalable=no" />
 <div class="nav-ht-fix"></div>
 <div>
     <div class="main-bg">
-        <div class="bg-tax-regulatory "></div>
+        <div class="bg-careers "></div>
         <div class="centered main-text-heading">
             Career@Finsurety
         </div>
     </div>
 </div>
-<div class="container-fluid">
-    <div class="row flex-column-reverse flex-sm-row">
-        <div class="col-sm-3">
-            <div class="sidebar-item ">
-                <div class="make-me-sticky">
-                    <div style="padding: 10px 20px 20px 10px">
-                        <h4 style="text-align:left">Our Services</h4>
-                        <ul class="ul-sidenav-list" type="none">
-                            <li><a href="#f"> Process Improvement & Risk advisory </a></li>
-                            <br>
-                            <li><a href="#f">Auditing and Assurance</a></li>
-                            <br>
-                            <li><a href="#f">Tax and regulatory</a></li>
-                            <br>
-                            <li><a href="#f">Transfer Pricing</a></li>
-                            <br>
-                            <li><a href="#f">Company Secretarial</a></li>
-                            <br>
-                            <li><a href="#f">Corporate Finance</a></li>
-                            <br>
-                            <li><a href="#f">Financial Accounting</a></li>
-                            <br>
-                            <li><a href="#f">Transaction Advisory</a></li>
-                        </ul>
-                        <br>
-                        <br>
-
-                        <div class="div2">For more information on how we can help create value for your organisation
-                            <br>
-                            Download Profile
-                        </div>
-                        <br>
-                        <br>
-                        <div class="div3">Interested in working with us?
-                            <br>
-                            <a href="#f">Explore a Career @ Finsurity</a>
-                        </div>
-                        <br>
-                        <br>
-
-                        <div class="div4">
-                            Need Help?
-                            <br>
-                            <p align="right">+911140160160</p>
-                            <p align="right"> info@coinmen.com</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-9">
-            <div class="body-text-2">
+<div class="body-text">
                 <h2>Careers</h2>
                 <br>
                 <p>
@@ -132,52 +96,10 @@ maximum-scale=1.0, user-scalable=no" />
                     <br>
                     humanresources@finsurety.com
                 </p>
-
-
-                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
-                <br>
-                <h4>Reporting Partners</h4>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">
-                        <br>
-                        <h5>Nitish Mittal</h5>
-                        Partner – Audit & Assurance Services
-                        <br>
-                        Experience: 20 years
-                        <br>
-                        Specializes in Audit, Accounting & Assurance
-                        <br>
-                        Former Sr. Manager, EY India (Assurance)
-                        <br>
-                        <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>
-                        <br>
-                        <a href="#f">Follow on Linkedin</a>
-                        <br>
-                    </div>
-                    <div class="col-sm-4">
-                        <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">
-                        <br>
-                        <h5>Nitish Mittal</h5>
-                        Partner – Audit & Assurance Services
-                        <br>
-                        Experience: 20 years
-                        <br>
-                        Specializes in Audit, Accounting & Assurance
-                        <br>
-                        Former Sr. Manager, EY India (Assurance)
-                        <br>
-                        <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>
-                        <br>
-                        <a href="#f">Follow on Linkedin</a>
-                        <br>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
 </div>
+
+
+
 <br>
 <br>
 <div class="footer-section">
@@ -189,8 +111,12 @@ maximum-scale=1.0, user-scalable=no" />
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="cta-text">
                             <h4>Find us</h4>
-                            <span>39, Maharani Bagh, GMS Road, Dehradun</span><br>
-                            <a href="https://www.google.com/maps/dir//finsurety+ballupur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x39092b94df9afd59:0x9a96a3bac9e76355?sa=X&ved=2ahUKEwjPgd7nv_3vAhVcOysKHb3UADIQ9RcwFHoECCIQAw">Get directions on map</a>
+                            <span><b>Dehradun Office : </b>39, Maharani Bagh, GMS Road, Dehradun, Uttarakhand - 248001</span><br>
+                            <a href="https://www.google.com/maps/dir//finsurety+ballupur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x39092b94df9afd59:0x9a96a3bac9e76355?sa=X&ved=2ahUKEwjPgd7nv_3vAhVcOysKHb3UADIQ9RcwFHoECCIQAw">Get
+                                Directions on map</a><br><br>
+                            <span><b>Delhi Office : </b>39, Maharani Bagh, GMS Road, Dehradun, Uttarakhand - 248001</span><br>
+                            <a href="https://www.google.com/maps/dir//finsurety+ballupur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x39092b94df9afd59:0x9a96a3bac9e76355?sa=X&ved=2ahUKEwjPgd7nv_3vAhVcOysKHb3UADIQ9RcwFHoECCIQAw">Get
+                                Directions on map</a>
                         </div>
                     </div>
                 </div>
@@ -199,7 +125,7 @@ maximum-scale=1.0, user-scalable=no" />
                         <i class="fas fa-phone"></i>
                         <div class="cta-text">
                             <h4>Call us</h4>
-                            <span>2738249749</span>
+                            <span>0135-2760177</span>
                         </div>
                     </div>
                 </div>
@@ -217,9 +143,10 @@ maximum-scale=1.0, user-scalable=no" />
                         <div class="cta-text">
                             <h4>Follow Us</h4>
                             <br>
-                            <a href="https://www.linkedin.com/company/finsurety-advisors-llp/" class="fa fa-linkedin"></a>
-                            <a href="https://www.instagram.com/finsuretyadvisors/" class="fa fa-instagram"></a>
-                            <a href="#" class="fa fa-facebook"></a>
+                            <a class="fa fa-linkedin"
+                               href="https://www.linkedin.com/company/finsurety-advisors-llp/"></a>
+                            <a class="fa fa-instagram" href="https://www.instagram.com/finsuretyadvisors/"></a>
+                            <a class="fa fa-facebook" href="#"></a>
                         </div>
                     </div>
                 </div>
