--- a/statutory-audit.html
+++ b/statutory-audit.html
@@ -20,42 +20,57 @@ maximum-scale=1.0, user-scalable=no" />
 </head>
 <body style="overflow-x: hidden">
 <!-- partial:index.partial.html -->
-<section class="navigation">
+<section class="navigation ">
     <div style="background: rgb(255,255,255);">
         <a href="index.html"><img src="images/Finsurety.png" style="height:80px;margin-bottom: 2px; display: block;
   margin-left: auto;
   margin-right: auto;"></a>
     </div>
     <div class="nav-container ">
+        <!--        <nav style="background: rgb(248, 249, 250);">-->
+        <!--            -->
+        <!--            <div style="text-align: center; padding-left: 20px;padding-right: 20px">THE WEBSITE IS UNDER MAINTENENCE. WE WILL BE BACK SOON</div>-->
+        <!--        </nav>-->
         <div class="nav-links">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Services</a>
                     <ul class="dropdown-1">
-                        <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a></li>
-                        <li><a href="auditing-and-assurance.html">Auditing & Assurance</a><ul class="dropdown-2">
-                            <li><a href="statutory-audit.html">Statutory Audit</a></li>
-                            <li><a href="#">Internal Audit</a></li>
-                        </ul></li>
-                        <li><a href="tax-and-regulatory.html">Tax & Regulatory</a>
+                        <li><a href="tax-advisory.html">Tax Advisory</a>
                             <ul class="dropdown-2">
                                 <li><a href="direct-tax.html">Direct Tax</a></li>
                                 <li><a href="indirect-tax.html">Indirect Tax</a></li>
-                            </ul></li>
-                        <li><a href="#">Company Secretarial</a></li>
-                        <li><a href="corporate-finance-debt-restructuring.html">Corporate Finance</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="auditing-and-assurance.html">Audit & Assurance</a>
+                            <ul class="dropdown-2">
+                                <li><a href="statutory-audit.html">Statutory Audit</a></li>
+                                <li><a href="#">Internal Audit</a></li>
+                                <li><a href="#">Other Audits</a></li>
+                            </ul>
+                        </li>
                         <li><a href="financial-accounting.html">Financial Accounting</a></li>
+                        <li><a href="corporate-finance-debt-restructuring.html">Debt Syndication &amp; Corporate
+                            Finance</a></li>
+                        <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a>
+                        </li>
+
+
+                        <li><a href="Company-secretarial.html">Company Secretarial</a></li>
+
+
                     </ul>
                 </li>
                 <li><a href="#">Sectors</a></li>
                 <li><a href="#">Finsurety</a>
                     <ul class="dropdown-1">
-                        <li><a href="#">The Firm & Partners</a></li>
-                        <li><a href="#">Board of Advisors & Finsurety Team</a></li>
-                    </ul></li>
+                        <li><a href="the-firm.html">The Firm & Partners</a></li>
+                        <li><a href="our-team.html">Board of Advisors & Finsurety Team</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">News Letter & Articles
                 </a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="careers.html">Contact Us</a></li>
             </ul>
         </div>
     </div>
@@ -63,9 +78,9 @@ maximum-scale=1.0, user-scalable=no" />
 <div class="nav-ht-fix"></div>
 <div>
     <div class="main-bg">
-        <div class="bg-direct-tax"></div>
+        <div class="bg-auditing-assurance"></div>
         <div class="centered main-text-heading">
-            Direct Tax
+            Statutory Audit
         </div>
     </div>
 </div>
@@ -77,21 +92,22 @@ maximum-scale=1.0, user-scalable=no" />
                     <div style="padding: 10px 20px 20px 10px">
                         <h4 style="text-align:left">Our Services</h4>
                         <ul class="ul-sidenav-list" type="none">
-                            <li><a href="#f"> Process Improvement & Risk advisory </a></li>
+
+                            <li><a href="tax-advisory.html">Tax Advisory</a>
+                            </li>
                             <br>
-                            <li><a href="#f">Auditing and Assurance</a></li>
-                            <br>
-                            <li><a href="#f">Tax and regulatory</a></li>
-                            <br>
-                            <li><a href="#f">Transfer Pricing</a></li>
-                            <br>
-                            <li><a href="#f">Company Secretarial</a></li>
-                            <br>
-                            <li><a href="#f">Corporate Finance</a></li>
-                            <br>
-                            <li><a href="#f">Financial Accounting</a></li>
-                            <br>
-                            <li><a href="#f">Transaction Advisory</a></li>
+                            <li><a href="auditing-and-assurance.html">Audit & Assurance</a>
+
+                            </li>
+                            <br> <li><a href="financial-accounting.html">Financial Accounting</a></li>
+                            <br><li><a href="corporate-finance-debt-restructuring.html">Debt Syndication &amp; Corporate
+                                Finance</a></li>
+                            <br> <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a>
+                            </li>
+
+
+                            <br> <li><a href="Company-secretarial.html">Company Secretarial</a></li>
+
                         </ul>
                         <br>
                         <br>
@@ -199,8 +215,12 @@ maximum-scale=1.0, user-scalable=no" />
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="cta-text">
                             <h4>Find us</h4>
-                            <span>39, Maharani Bagh, GMS Road, Dehradun</span><br>
-                            <a href="https://www.google.com/maps/dir//finsurety+ballupur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x39092b94df9afd59:0x9a96a3bac9e76355?sa=X&ved=2ahUKEwjPgd7nv_3vAhVcOysKHb3UADIQ9RcwFHoECCIQAw">Get directions on map</a>
+                            <span><b>Dehradun Office : </b>39, Maharani Bagh, GMS Road, Dehradun, Uttarakhand - 248001</span><br>
+                            <a href="https://www.google.com/maps/dir//finsurety+ballupur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x39092b94df9afd59:0x9a96a3bac9e76355?sa=X&ved=2ahUKEwjPgd7nv_3vAhVcOysKHb3UADIQ9RcwFHoECCIQAw">Get
+                                Directions on map</a><br><br>
+                            <span><b>Delhi Office : </b>39, Maharani Bagh, GMS Road, Dehradun, Uttarakhand - 248001</span><br>
+                            <a href="https://www.google.com/maps/dir//finsurety+ballupur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x39092b94df9afd59:0x9a96a3bac9e76355?sa=X&ved=2ahUKEwjPgd7nv_3vAhVcOysKHb3UADIQ9RcwFHoECCIQAw">Get
+                                Directions on map</a>
                         </div>
                     </div>
                 </div>
@@ -209,7 +229,7 @@ maximum-scale=1.0, user-scalable=no" />
                         <i class="fas fa-phone"></i>
                         <div class="cta-text">
                             <h4>Call us</h4>
-                            <span>2738249749</span>
+                            <span>0135-2760177</span>
                         </div>
                     </div>
                 </div>
@@ -227,9 +247,10 @@ maximum-scale=1.0, user-scalable=no" />
                         <div class="cta-text">
                             <h4>Follow Us</h4>
                             <br>
-                            <a href="https://www.linkedin.com/company/finsurety-advisors-llp/" class="fa fa-linkedin"></a>
-                            <a href="https://www.instagram.com/finsuretyadvisors/" class="fa fa-instagram"></a>
-                            <a href="#" class="fa fa-facebook"></a>
+                            <a class="fa fa-linkedin"
+                               href="https://www.linkedin.com/company/finsurety-advisors-llp/"></a>
+                            <a class="fa fa-instagram" href="https://www.instagram.com/finsuretyadvisors/"></a>
+                            <a class="fa fa-facebook" href="#"></a>
                         </div>
                     </div>
                 </div>
