nav, footer and css fix

--- a/careers.html
+++ b/careers.html
@@ -68,7 +68,7 @@ maximum-scale=1.0, user-scalable=no" />
                         <li><a href="our-team.html">Board of Advisors & Finsurety Team</a></li>
                     </ul>
                 </li>
-                <li><a href="#">News Letter & Articles
+                <li><a href="news-letter.html">News Letter & Articles
                 </a></li>
                 <li><a href="careers.html">Contact Us</a></li>
             </ul>
@@ -121,11 +121,11 @@ maximum-scale=1.0, user-scalable=no" />
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="cta-text">
                             <h4>Find us</h4>
-                            <span><b>Dehradun Office : </b>39, Maharani Bagh, GMS Road, Dehradun, Uttarakhand - 248001</span><br>
-                            <a href="https://www.google.com/maps/dir//finsurety+ballupur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x39092b94df9afd59:0x9a96a3bac9e76355?sa=X&ved=2ahUKEwjPgd7nv_3vAhVcOysKHb3UADIQ9RcwFHoECCIQAw">Get
+                            <span><b>Delhi Office : </b>708 Northex Tower, A-09, Netaji Subhash Place, Pitampura, New Delhi - 110034</span><br>
+                            <a href="https://goo.gl/maps/7LHezHVo4XLncXd39">Get
                                 Directions on map</a><br><br>
-                            <span><b>Delhi Office : </b>39, Maharani Bagh, GMS Road, Dehradun, Uttarakhand - 248001</span><br>
-                            <a href="https://www.google.com/maps/dir//finsurety+ballupur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x39092b94df9afd59:0x9a96a3bac9e76355?sa=X&ved=2ahUKEwjPgd7nv_3vAhVcOysKHb3UADIQ9RcwFHoECCIQAw">Get
+                            <span><b>Dehradun Office : </b>39, Maharani Bagh, GMS Road, Dehradun, Uttarakhand - 248001</span><br>
+                            <a href="https://goo.gl/maps/Bii57fquv3yXfdzw6">Get
                                 Directions on map</a>
                         </div>
                     </div>
