--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ maximum-scale=1.0, user-scalable=no" name="viewport"/>
                         <li><a href="our-team.html">Board of Advisors & Finsurety Team</a></li>
                     </ul>
                 </li>
-                <li><a href="#">News Letter & Articles
+                <li><a href="news-letter.html">News Letter & Articles
                 </a></li>
                 <li><a href="careers.html">Contact Us</a></li>
             </ul>
@@ -81,7 +81,7 @@ maximum-scale=1.0, user-scalable=no" name="viewport"/>
 </section>
 <div class="nav-ht-fix"></div>
 <div class="main-bg">
-    <div class="bg-home"></div>
+    <div class="bg-home" style="z-index:-1;"></div>
     <div class="main-text-heading centered">
         Finsurety
         Signifies
@@ -89,7 +89,8 @@ maximum-scale=1.0, user-scalable=no" name="viewport"/>
        <br> Surety and Security
     </div>
 </div>
-<div class="body-text" style="text-align: justify">
+
+<div class="body-text" style="text-align: justify;z-index:1;">
 
     <h2>Introducing Finsurety Advisors</h2>
     <p>
@@ -264,11 +265,11 @@ maximum-scale=1.0, user-scalable=no" name="viewport"/>
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="cta-text">
                             <h4>Find us</h4>
-                            <span><b>Dehradun Office : </b>39, Maharani Bagh, GMS Road, Dehradun, Uttarakhand - 248001</span><br>
-                            <a href="https://www.google.com/maps/dir//finsurety+ballupur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x39092b94df9afd59:0x9a96a3bac9e76355?sa=X&ved=2ahUKEwjPgd7nv_3vAhVcOysKHb3UADIQ9RcwFHoECCIQAw">Get
+                            <span><b>Delhi Office : </b>708 Northex Tower, A-09, Netaji Subhash Place, Pitampura, New Delhi - 110034</span><br>
+                            <a href="https://goo.gl/maps/7LHezHVo4XLncXd39">Get
                                 Directions on map</a><br><br>
-                            <span><b>Delhi Office : </b>39, Maharani Bagh, GMS Road, Dehradun, Uttarakhand - 248001</span><br>
-                            <a href="https://www.google.com/maps/dir//finsurety+ballupur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x39092b94df9afd59:0x9a96a3bac9e76355?sa=X&ved=2ahUKEwjPgd7nv_3vAhVcOysKHb3UADIQ9RcwFHoECCIQAw">Get
+                            <span><b>Dehradun Office : </b>39, Maharani Bagh, GMS Road, Dehradun, Uttarakhand - 248001</span><br>
+                            <a href="https://goo.gl/maps/Bii57fquv3yXfdzw6">Get
                                 Directions on map</a>
                         </div>
                     </div>
