--- a/indirect-tax.html
+++ b/indirect-tax.html
@@ -68,7 +68,7 @@ maximum-scale=1.0, user-scalable=no" />
                         <li><a href="our-team.html">Board of Advisors & Finsurety Team</a></li>
                     </ul>
                 </li>
-                <li><a href="#">News Letter & Articles
+                <li><a href="news-letter.html">News Letter & Articles
                 </a></li>
                 <li><a href="careers.html">Contact Us</a></li>
             </ul>
@@ -86,7 +86,7 @@ maximum-scale=1.0, user-scalable=no" />
 </div>
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
-        <div class="col-sm-3">
+        <div class="col-sm-3 pane-left">
             <div class="sidebar-item ">
                 <div class="make-me-sticky">
                     <div style="padding: 10px 20px 20px 10px">
@@ -112,30 +112,30 @@ maximum-scale=1.0, user-scalable=no" />
                         <br>
                         <br>
 
-                        <div class="div2">For more information on how we can help create value for your organisation
-                            <br>
-                            Download Profile
-                        </div>
-                        <br>
-                        <br>
-                        <div class="div3">Interested in working with us?
-                            <br>
-                            <a href="#f">Explore a Career @ Finsurity</a>
-                        </div>
-                        <br>
-                        <br>
+<!--                        <div class="div2">For more information on how we can help create value for your organisation-->
+<!--                            <br>-->
+<!--                            Download Profile-->
+<!--                        </div>-->
+<!--                        <br>-->
+<!--                        <br>-->
+<!--                        <div class="div3">Interested in working with us?-->
+<!--                            <br>-->
+<!--                            <a href="#f">Explore a Career @ Finsurity</a>-->
+<!--                        </div>-->
+<!--                        <br>-->
+<!--                        <br>-->
 
-                        <div class="div4">
-                            Need Help?
-                            <br>
-                            <p align="right">+911140160160</p>
-                            <p align="right"> info@coinmen.com</p>
-                        </div>
+<!--                        <div class="div4">-->
+<!--                            Need Help?-->
+<!--                            <br>-->
+<!--                            <p align="right">+911140160160</p>-->
+<!--                            <p align="right"> info@coinmen.com</p>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-sm-9">
+        <div class="col-sm-9 pane-right">
             <div class="body-text-2">
                 <h2>Indirect Taxes - Regulations & Compliances
                 </h2>
@@ -203,52 +203,53 @@ maximum-scale=1.0, user-scalable=no" />
                 hierarchies.
                 <br>
                 <br>
-                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
                 <br>
-                <h4>Reporting Partners</h4>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">
-                        <br>
-                        <h5>Nitish Mittal</h5>
-                        Partner – Audit & Assurance Services
-                        <br>
-                        Experience: 20 years
-                        <br>
-                        Specializes in Audit, Accounting & Assurance
-                        <br>
-                        Former Sr. Manager, EY India (Assurance)
-                        <br>
-                        <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>
-                        <br>
-                        <a href="#f">Follow on Linkedin</a>
-                        <br>
-                    </div>
-                    <div class="col-sm-4">
-                        <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">
-                        <br>
-                        <h5>Nitish Mittal</h5>
-                        Partner – Audit & Assurance Services
-                        <br>
-                        Experience: 20 years
-                        <br>
-                        Specializes in Audit, Accounting & Assurance
-                        <br>
-                        Former Sr. Manager, EY India (Assurance)
-                        <br>
-                        <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>
-                        <br>
-                        <a href="#f">Follow on Linkedin</a>
-                        <br>
-                    </div>
-                </div>
+                <br>
+<!--                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">-->
+<!--                <br>-->
+<!--                <h4>Reporting Partners</h4>-->
+<!--                <div class="row">-->
+<!--                    <div class="col-sm-4">-->
+<!--                        <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">-->
+<!--                        <br>-->
+<!--                        <h5>Nitish Mittal</h5>-->
+<!--                        Partner – Audit & Assurance Services-->
+<!--                        <br>-->
+<!--                        Experience: 20 years-->
+<!--                        <br>-->
+<!--                        Specializes in Audit, Accounting & Assurance-->
+<!--                        <br>-->
+<!--                        Former Sr. Manager, EY India (Assurance)-->
+<!--                        <br>-->
+<!--                        <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>-->
+<!--                        <br>-->
+<!--                        <a href="#f">Follow on Linkedin</a>-->
+<!--                        <br>-->
+<!--                    </div>-->
+<!--                    <div class="col-sm-4">-->
+<!--                        <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">-->
+<!--                        <br>-->
+<!--                        <h5>Nitish Mittal</h5>-->
+<!--                        Partner – Audit & Assurance Services-->
+<!--                        <br>-->
+<!--                        Experience: 20 years-->
+<!--                        <br>-->
+<!--                        Specializes in Audit, Accounting & Assurance-->
+<!--                        <br>-->
+<!--                        Former Sr. Manager, EY India (Assurance)-->
+<!--                        <br>-->
+<!--                        <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>-->
+<!--                        <br>-->
+<!--                        <a href="#f">Follow on Linkedin</a>-->
+<!--                        <br>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
         </div>
 
     </div>
 </div>
-<br>
-<br>
+
 <div class="footer-section">
     <div class="container">
         <div class="footer-cta pt-5 pb-5">
@@ -258,11 +259,11 @@ maximum-scale=1.0, user-scalable=no" />
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="cta-text">
                             <h4>Find us</h4>
-                            <span><b>Dehradun Office : </b>39, Maharani Bagh, GMS Road, Dehradun, Uttarakhand - 248001</span><br>
-                            <a href="https://www.google.com/maps/dir//finsurety+ballupur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x39092b94df9afd59:0x9a96a3bac9e76355?sa=X&ved=2ahUKEwjPgd7nv_3vAhVcOysKHb3UADIQ9RcwFHoECCIQAw">Get
+                            <span><b>Delhi Office : </b>708 Northex Tower, A-09, Netaji Subhash Place, Pitampura, New Delhi - 110034</span><br>
+                            <a href="https://goo.gl/maps/7LHezHVo4XLncXd39">Get
                                 Directions on map</a><br><br>
-                            <span><b>Delhi Office : </b>39, Maharani Bagh, GMS Road, Dehradun, Uttarakhand - 248001</span><br>
-                            <a href="https://www.google.com/maps/dir//finsurety+ballupur/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x39092b94df9afd59:0x9a96a3bac9e76355?sa=X&ved=2ahUKEwjPgd7nv_3vAhVcOysKHb3UADIQ9RcwFHoECCIQAw">Get
+                            <span><b>Dehradun Office : </b>39, Maharani Bagh, GMS Road, Dehradun, Uttarakhand - 248001</span><br>
+                            <a href="https://goo.gl/maps/Bii57fquv3yXfdzw6">Get
                                 Directions on map</a>
                         </div>
                     </div>
