--- a/careers.html
+++ b/careers.html
@@ -93,7 +93,7 @@ maximum-scale=1.0, user-scalable=no" />
                 <p>
                     Please reach out to us on:
                     <br>
-                    <a href = "mailto: admin@finsurety.com ">humanresources@finsurety.com</a>
+                    <a href = "mailto: admin@finsurety.com ">admin@finsurety.com</a>
 
                 </p>
     <br>
