--- a/direct-tax.html
+++ b/direct-tax.html
@@ -81,6 +81,8 @@ maximum-scale=1.0, user-scalable=no" />
         <div class="bg-tax-regulatory"></div>
         <div class="centered main-text-heading">
             Direct Tax
+            <br>
+            - Regulations & Compliances
         </div>
     </div>
 </div>
