--- a/direct-tax.html
+++ b/direct-tax.html
@@ -142,9 +142,9 @@ maximum-scale=1.0, user-scalable=no" />
                 <h2>Direct Taxes - Regulations & Compliances
                 </h2>
                 <p>
-                    The wide scope of the Income Tax Act 1961 still governs the flow of direct tax in India, along with
+                    The wide scope of the Income Tax Act, 1961 still governs the flow of direct tax in India, along with
                     the various amendments, circulars and clarifications issued from time to time by CBDT(Central Board
-                    of Direct Taxes)
+                    of Direct Taxes).
                 </p>
                 <h3>Finsurety’s Tax Advisory Services
                 </h3>
@@ -152,7 +152,8 @@ maximum-scale=1.0, user-scalable=no" />
                 individuals on various tax and regulatory matters at every stage of their income lifecycle, thereby
                 assisting them in tax planning and mitigating the tax burden by ensuring that they derive all the tax
                 benefits available under the tax laws. We offer our direct tax services in the following categories:
-                <b>
+                <br>
+                                <b>
                     <ul style="padding-left: 40px">
                         <li>
                             Corporate Tax
@@ -176,7 +177,7 @@ maximum-scale=1.0, user-scalable=no" />
                 Tax planning plays an important part in corporate taxation and our primary objective is to help mitigate
                 the burden of taxation within the confines of the law for our clients. Our wide understanding of the
                 laws that affect the corporates in India helps us to provide solutions by offering these services:
-                <i>
+                <b><i>
                     <ul style="padding-left: 40px">
                         <li>Statutory compliance support
                         <li> Preparation and filing of corporate tax returns
@@ -190,7 +191,7 @@ maximum-scale=1.0, user-scalable=no" />
                         <li>Review and applicability of POEM
 
                     </ul>
-                </i>
+                </i></b>
                 <h4>Personal Tax</h4>
                 <p>We can help you explore your tax-saving opportunities and develop your tax planning strategy under
                     the confines of the law. Drawing on multidisciplinary expertise, we provide you with customized
@@ -201,7 +202,7 @@ maximum-scale=1.0, user-scalable=no" />
                     and personal decisions, providing integrated guidance to retain more of your hard-earned wealth.
                 </p>
                 We offer the following services in personal tax:
-                <i>
+                <b><i>
                     <ul style="padding-left: 40px">
                         <li>Filing of annual tax returns
                         <li> Filing of Advance Tax returns
@@ -209,7 +210,7 @@ maximum-scale=1.0, user-scalable=no" />
                         <li> Tax representation before Assessing Officer and other tax authorities
                         <li> Advisory on litigation strategy and its implementation
                     </ul>
-                </i>
+                </i></b>
                 <h4>International Tax</h4>
                 <p>As businesses operate globally, it is imperative for us to understand the evolving global tax laws
                     across countries, not only to ensure compliance but also factor in the significant cost of doing
