--- a/indirect-tax.html
+++ b/indirect-tax.html
@@ -147,7 +147,7 @@ maximum-scale=1.0, user-scalable=no" />
                     logistics, pricing, procurements, accounting, and Information Technology (IT) systems.
                 </p>
                 <p>As India is a federal country, there is a dual GST with a four rate structure to meet the interests
-                    of various states. Given that the government is extremely proactive in addressing the transition
+                    of various businesses. Given that the government is extremely proactive in addressing the transition
                     challenges faced by trade and industry, a number of exemptions and concessions find place in the
                     evolving GST system, but so do a number of challenges owing to the change in the initial years of
                     its inception.
@@ -185,7 +185,7 @@ maximum-scale=1.0, user-scalable=no" />
                     </ul>
                 </b>
                 <p>
-                    We offer all India GST compliances including but not limited to GST registration, obtaining GSTIN,
+                    We offer pan India GST compliances including but not limited to GST registration, obtaining GSTIN,
                     filing of monthly and annual reports, data analysis vis-à-vis GST transactions, total tax liability
                     calculation and monthly MIS of indirect tax compliance. We also review your GST structure by
                     reviewing the taxability of your business transactions, documentation, ITC compliances,
