--- a/statutory-audit.html
+++ b/statutory-audit.html
@@ -44,7 +44,7 @@ maximum-scale=1.0, user-scalable=no" />
                         </li>
                         <li><a href="auditing-and-assurance.html">Audit & Assurance</a>
                             <ul class="dropdown-2">
-                                <li><a href="statutory-audit.html">Statutory Audit</a></li>
+                                <li><a href="statutory-audit.html">Statutory &amp; Tax Audit</a></li>
                                 <li><a href="#">Internal Audit</a></li>
                                 <li><a href="#">Other Audits</a></li>
                             </ul>
@@ -80,7 +80,7 @@ maximum-scale=1.0, user-scalable=no" />
     <div class="main-bg">
         <div class="bg-auditing-assurance"></div>
         <div class="centered main-text-heading">
-            Statutory Audit
+            Statutory &amp; Tax Audit
         </div>
     </div>
 </div>
