--- a/our-team.html
+++ b/our-team.html
@@ -54,13 +54,13 @@ maximum-scale=1.0, user-scalable=no"/>
                             </ul>
                         </li>
                         <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                        <li><a href="corporate-finance-debt-restructuring.html">Debt Syndication &amp; Corporate
+                        <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
                             Finance</a></li>
                         <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a>
                         </li>
 
 
-                        <li><a href="Company-secretarial.html">Company Secretarial</a></li>
+                        <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
 
 
                     </ul>
@@ -69,7 +69,7 @@ maximum-scale=1.0, user-scalable=no"/>
                 <li><a href="#">Finsurety</a>
                     <ul class="dropdown-1">
                         <li><a href="the-firm.html">The Firm & Partners</a></li>
-                        <li><a href="our-team.html">Board of Advisors & Finsurety Team</a></li>
+                        <li><a href="our-team.html">Finsurety Team</a></li>
                     </ul>
                 </li>
                 <li><a href="news-letter.html">News Letter & Articles
@@ -110,30 +110,9 @@ maximum-scale=1.0, user-scalable=no"/>
             </div>
             <div class="col-sm-9">
                 <div class="">
-                    <h4>Ms Juhi Aggarwal </h4>
-                    <h5>ACA</h5>
-                    <p>Juhi has post qualification experience of more than 3 years and leads the International Taxation
-                        have closely worked on taxation for Expats and advising clients in tax planning and
-                        representation before Tax & Other Authorities at different levels. She is well versed in
-                        International, Corporate and Personal Taxation. She also leads our Secretarial Compliances
-                        Divisions and handles all the filings under various Laws. Juhi also works closely in the
-                        Assurances & Financial Accounting domains having worked on clients from different industries.
-                        Over the years Juhi has also developed expertise in handling Accounting & Assurance for
-                        Government Agencies, Societies, Trusts & Companies.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-3">
-                <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg" height="80%"
-                     style="text-align: center;">
-            </div>
-            <div class="col-sm-9">
-                <div class="">
                     <h4>Mr Naveen Pruthi </h4>
                     <h5>ACA, LLB, MBA</h5>
-                    <p>Naveen has over 8 years of experience in Internal Audit and indirect taxation . He has worked
+                    <p>Mr Naveen has over 8 years of experience in Internal Audit and indirect taxation . He has worked
                         extensively in manufacturing, real estate, advertising and education sector. Before joining the
                         team, Naveen worked with a Manufacturing Company as Accounts and Finance Executive for 2 years,
                         as an Accounts and Finance Manager for a Real Estate & Construction company for 5 years and as
@@ -146,6 +125,28 @@ maximum-scale=1.0, user-scalable=no"/>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg" height="80%"
+                     style="text-align: center;">
+            </div>
+            <div class="col-sm-9">
+                <div class="">
+                    <h4>Ms Juhi Aggarwal </h4>
+                    <h5>ACA</h5>
+                    <p>Ms Juhi has post qualification experience of more than 3 years and leads the International Taxation
+                        have closely worked on taxation for Expats and advising clients in tax planning and
+                        representation before Tax & Other Authorities at different levels. She is well versed in
+                        International, Corporate and Personal Taxation. She also leads our Secretarial Compliances
+                        Divisions and handles all the filings under various Laws. Juhi also works closely in the
+                        Assurances & Financial Accounting domains having worked on clients from different industries.
+                        Over the years Juhi has also developed expertise in handling Accounting & Assurance for
+                        Government Agencies, Societies, Trusts & Companies.
+                    </p>
+                </div>
+            </div>
+        </div>
+
         <br>
         <div class="row">
             <div class="col-sm-3">
@@ -156,7 +157,7 @@ maximum-scale=1.0, user-scalable=no"/>
                 <div class="">
                     <h4>Ms Nidhi Solanki </h4>
                     <h5>ACA</h5>
-                    <p>Nidhi has over six years of experience focused on providing taxation, both direct and indirect,
+                    <p>Ms Nidhi has over six years of experience focused on providing taxation, both direct and indirect,
                         and auditing related services to the clients in various sectors such as medical, educational,
                         hospitality, automotive sectors, and banking. She has worked closely on Forensic & Investigative
                         Audits on many engagements. She has also assisted many private limited companies and LLPs in
@@ -175,7 +176,7 @@ maximum-scale=1.0, user-scalable=no"/>
                     <h4>Ms Rakhi Gaur</h4>
                     <h5>B.Com, M.Com</h5>
                     <p>
-                        Rakhi is an Indirect Tax expert having deep knowledge of Goods & Service Tax. She represents
+                        Ms Rakhi is an Indirect Tax expert having deep knowledge of Goods & Service Tax. She represents
                         clients before the Indirect Tax Authorities at various levels and has a keen eye for any changes
                         in the Law that could benefit our clients. Along with Taxation, Rakhi handles Assurances for
                         Technology Companies & Societies and Trusts.
@@ -183,45 +184,7 @@ maximum-scale=1.0, user-scalable=no"/>
                 </div>
             </div>
         </div>
-        <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
-        <br>
-        <h4>Reporting Partners</h4>
-        <div class="row">
-            <div class="col-sm-4">
-                <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">
-                <br>
-                <h5>Nitish Mittal</h5>
-                Partner – Audit & Assurance Services
-                <br>
-                Experience: 20 years
-                <br>
-                Specializes in Audit, Accounting & Assurance
-                <br>
-                Former Sr. Manager, EY India (Assurance)
-                <br>
-                <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>
-                <br>
-                <a href="#f">Follow on Linkedin</a>
-                <br>
-            </div>
-            <div class="col-sm-4">
-                <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">
-                <br>
-                <h5>Nitish Mittal</h5>
-                Partner – Audit & Assurance Services
-                <br>
-                Experience: 20 years
-                <br>
-                Specializes in Audit, Accounting & Assurance
-                <br>
-                Former Sr. Manager, EY India (Assurance)
-                <br>
-                <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>
-                <br>
-                <a href="#f">Follow on Linkedin</a>
-                <br>
-            </div>
-        </div>
+
     </div>
 </div>
 
