--- a/the-firm.html
+++ b/the-firm.html
@@ -54,13 +54,13 @@ maximum-scale=1.0, user-scalable=no"/>
                             </ul>
                         </li>
                         <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                        <li><a href="corporate-finance-debt-restructuring.html">Debt Syndication &amp; Corporate
+                        <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
                             Finance</a></li>
                         <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a>
                         </li>
 
 
-                        <li><a href="Company-secretarial.html">Company Secretarial</a></li>
+                        <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
 
 
                     </ul>
@@ -69,7 +69,7 @@ maximum-scale=1.0, user-scalable=no"/>
                 <li><a href="#">Finsurety</a>
                     <ul class="dropdown-1">
                         <li><a href="the-firm.html">The Firm & Partners</a></li>
-                        <li><a href="our-team.html">Board of Advisors & Finsurety Team</a></li>
+                        <li><a href="our-team.html">Finsurety Team</a></li>
                     </ul>
                 </li>
                 <li><a href="news-letter.html">News Letter & Articles
@@ -139,10 +139,10 @@ maximum-scale=1.0, user-scalable=no"/>
                 <h5>ACA</h5>
                 <p>
                     Mr Akash Khanduja is a Chartered Accountant with more than 4 years of experience in the fields of
-                    Debt Syndication, Taxation & Assurance Domains and has previously worked with
-                    PriceWaterHouseCooper(PwC). Having handled more than 800 crores of portfolio under Debt Syndication,
+                    Debt Structuring, Taxation & Assurance and has previously worked with
+                    PriceWaterHouseCooper(PwC). Having handled more than 800 crores of Debt Portfolio,
                     he specialises in helping companies in raising and restructuring of project loans, equipment finance
-                    etc. He also specialises in corporate structuring of companies by helping them in setting up and
+                    etc. He also specialises in corporate structuring of businesses by helping them in setting up and
                     implementing internal control systems to streamline flow of information and increasing efficiencies
                     by improving processes and development of Management Information Systems. Akash also leads the team
                     for Forensic and Investigative Audits and has closely worked for Government agencies on the same.
