--- a/corporate-finance-debt-restructuring.html
+++ b/corporate-finance-debt-restructuring.html
@@ -50,13 +50,13 @@ maximum-scale=1.0, user-scalable=no" />
                             </ul>
                         </li>
                         <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                        <li><a href="corporate-finance-debt-restructuring.html">Debt Syndication &amp; Corporate
+                        <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
                             Finance</a></li>
                         <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a>
                         </li>
 
 
-                        <li><a href="Company-secretarial.html">Company Secretarial</a></li>
+                        <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
 
 
                     </ul>
@@ -65,7 +65,7 @@ maximum-scale=1.0, user-scalable=no" />
                 <li><a href="#">Finsurety</a>
                     <ul class="dropdown-1">
                         <li><a href="the-firm.html">The Firm & Partners</a></li>
-                        <li><a href="our-team.html">Board of Advisors & Finsurety Team</a></li>
+                        <li><a href="our-team.html">Finsurety Team</a></li>
                     </ul>
                 </li>
                 <li><a href="news-letter.html">News Letter & Articles
@@ -80,9 +80,9 @@ maximum-scale=1.0, user-scalable=no" />
     <div class="main-bg">
         <div class="bg-corporate-finance"></div>
         <div class="centered main-text-heading">
-            Corporate Finance &amp;
+            Debt Restructuring &amp;
             <br>
-            Debt Restructuring
+            Corporate Finance
         </div>
     </div>
 </div>
@@ -104,13 +104,13 @@ maximum-scale=1.0, user-scalable=no" />
 
                             </li>
                             <br> <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                            <br><li><a style="font-weight: bold; padding-left: 10px; text-decoration: underline; color: rgb(134, 206, 19);" href="corporate-finance-debt-restructuring.html">Debt Syndication &amp; Corporate
+                            <br><li><a style="font-weight: bold; padding-left: 10px; text-decoration: underline; color: rgb(134, 206, 19);" href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
                             Finance</a></li>
                             <br> <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a>
                         </li>
 
 
-                            <br> <li><a href="Company-secretarial.html">Company Secretarial</a></li>
+                            <br> <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
 
                         </ul>
                         <br>
@@ -141,7 +141,7 @@ maximum-scale=1.0, user-scalable=no" />
         </div>
         <div class="col-sm-9 pane-right">
             <div class="body-text-2">
-                <h2>Debt Syndication & Corporate Finance - The Best Way Forward </h2>
+                <h2>Debt Structuring & Corporate Finance - The Best Way Forward </h2>
                 <br><h4>
                 Debt Raising & Restructuring
 
