--- a/news-letter.html
+++ b/news-letter.html
@@ -50,13 +50,13 @@ maximum-scale=1.0, user-scalable=no" />
                             </ul>
                         </li>
                         <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                        <li><a href="corporate-finance-debt-restructuring.html">Debt Syndication &amp; Corporate
+                        <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
                             Finance</a></li>
                         <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a>
                         </li>
 
 
-                        <li><a href="Company-secretarial.html">Company Secretarial</a></li>
+                        <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
 
 
                     </ul>
@@ -65,7 +65,7 @@ maximum-scale=1.0, user-scalable=no" />
                 <li><a href="#">Finsurety</a>
                     <ul class="dropdown-1">
                         <li><a href="the-firm.html">The Firm & Partners</a></li>
-                        <li><a href="our-team.html">Board of Advisors & Finsurety Team</a></li>
+                        <li><a href="our-team.html">Finsurety Team</a></li>
                     </ul>
                 </li>
                 <li><a href="news-letter.html">News Letter & Articles
