--- a/index.html
+++ b/index.html
@@ -19,64 +19,119 @@ maximum-scale=1.0, user-scalable=no" name="viewport"/>
     <script crossorigin="anonymous"
             integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="nav-mob.css">
+    <script src="nav-mob.js"></script>
 
 
 </head>
 <body style="overflow-x: hidden">
+<nav id="ddfullscreenmenu">
+
+    <div id="closex">Close</div>
+
+    <div id="ulwrapper">
+        <!-- Define your UL (nested) menu below -->
+        <ul id="fullscreenmenu-ul">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Services</a>
+                <ul>
+                    <li><a href="#">Tax Advisory</a>
+                        <ul>
+                            <li><a href="tax-advisory.html">Tax Advisory - Overview</a></li>
+                            <li><a href="direct-tax.html">Direct Tax</a></li>
+                            <li><a href="indirect-tax.html">Indirect Tax</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Audit &amp; Assurance</a>
+                        <ul>
+                            <li><a href="auditing-and-assurance.html">Audit &amp; Assurance - Overview</a></li>
+                            <li><a href="statutory-audit.html">Statutory &amp; Tax Audit</a></li>
+                            <li><a href="internal-audit.html">Internal Audit</a>
+                            </li>
+                            <li><a href="other-audit.html">Other Audits</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a href="financial-accounting.html">Financial Accounting</a></li>
+                    <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
+                        Finance</a></li>
+                    <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a></li>
+                    <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
+                </ul>
+            </li>
+            <li><a href="sectors.html">Sectors</a></li>
+            <li><a href="">Finsurety</a>
+            <ul>
+                <li><a href="the-firm.html">The Firm &amp; Partners</a></li>
+                <li><a href="our-team.html">Finsurety Team</a></li>
+            </ul>
+            </li>
+            <li><a href="news-letter.html">News Letters &amp; Articles</a></li>
+            <li><a href="careers.html">Contact US</a></li>
+        </ul>
+    </div>
+</nav>
+<script>
+    // initialize menu. Call this after menu markup:
+    ddfullscreenmenu.init()
+</script>
 <section class="navigation ">
     <div style="background: rgb(255,255,255);">
         <a href="index.html"><img src="images/Finsurety.png" style="height:80px;margin-bottom: 2px; display: block;
   margin-left: auto;
   margin-right: auto;"></a>
-    </div>
-    <div class="nav-container ">
-        <!--        <nav style="background: rgb(248, 249, 250);">-->
-        <!--            -->
-        <!--            <div style="text-align: center; padding-left: 20px;padding-right: 20px">THE WEBSITE IS UNDER MAINTENENCE. WE WILL BE BACK SOON</div>-->
-        <!--        </nav>-->
-        <div class="nav-links">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Services</a>
-                    <ul class="dropdown-1">
-                        <li><a href="tax-advisory.html">Tax Advisory</a>
-                            <ul class="dropdown-2">
-                                <li><a href="direct-tax.html">Direct Tax</a></li>
-                                <li><a href="indirect-tax.html">Indirect Tax</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="auditing-and-assurance.html">Audit & Assurance</a>
-                            <ul class="dropdown-2">
-                                <li><a href="statutory-audit.html">Statutory &amp; Tax Audit</a></li>
-                                <li><a href="#">Internal Audit</a></li>
-                                <li><a href="#">Other Audits</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                        <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
-                            Finance</a></li>
-                        <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a>
-                        </li>
+        <div class="nav-container ">
+            <!--        <nav style="background: rgb(248, 249, 250);">-->
+            <!--            -->
+            <!--            <div style="text-align: center; padding-left: 20px;padding-right: 20px">THE WEBSITE IS UNDER MAINTENENCE. WE WILL BE BACK SOON</div>-->
+            <!--        </nav>-->
+            <div class="nav-links">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Services</a>
+                        <ul class="dropdown-1">
+                            <li><a href="tax-advisory.html">Tax Advisory</a>
+                                <ul class="dropdown-2">
+                                    <li><a href="direct-tax.html">Direct Tax</a></li>
+                                    <li><a href="indirect-tax.html">Indirect Tax</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="auditing-and-assurance.html">Audit & Assurance</a>
+                                <ul class="dropdown-2">
+                                    <li><a href="statutory-audit.html">Statutory &amp; Tax Audit</a></li>
+                                    <li><a href="internal-audit.html">Internal Audit</a></li>
+                                    <li><a href="other-audit.html">Other Audits</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="financial-accounting.html">Financial Accounting</a></li>
+                            <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
+                                Finance</a></li>
+                            <li><a href="process-improvement-risk-advisory.html">Process Improvement &amp; Risk Advisory</a>
+                            </li>
 
 
-                        <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
+                            <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
 
 
-                    </ul>
-                </li>
-                <li><a href="#">Sectors</a></li>
-                <li><a href="#">Finsurety</a>
-                    <ul class="dropdown-1">
-                        <li><a href="the-firm.html">The Firm & Partners</a></li>
-                        <li><a href="our-team.html">Finsurety Team</a></li>
-                    </ul>
-                </li>
-                <li><a href="news-letter.html">News Letter & Articles
-                </a></li>
-                <li><a href="careers.html">Contact Us</a></li>
-            </ul>
+                        </ul>
+                    </li>
+                    <li><a href="sectors.html">Sectors</a></li>
+                    <li><a href="#">Finsurety</a>
+                        <ul class="dropdown-1">
+                            <li><a href="the-firm.html">The Firm & Partners</a></li>
+                            <li><a href="our-team.html">Finsurety Team</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="news-letter.html">News Letter & Articles
+                    </a></li>
+                    <li><a href="careers.html">Contact Us</a></li>
+                </ul>
+            </div>
         </div>
+        <div class="hide-nav" style="height: 10px"></div>
+        <div id="navtoggler" onClick="ddfullscreenmenu.togglemenu()" ></div>
     </div>
 </section>
 <div class="nav-ht-fix"></div>
@@ -86,7 +141,7 @@ maximum-scale=1.0, user-scalable=no" name="viewport"/>
         Finsurety
         Signifies
         Financial
-       <br> Surety and Security
+        <br> Surety and Security
     </div>
 </div>
 
